uri : force serializing URI for incoming field in JSON post